cluster/apps/default/chirpstack/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # Cloudflare cert
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    # dns record
    external-dns.alpha.kubernetes.io/hostname: pmcd.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    meta.helm.sh/release-name: chirpstack
  name: chirpstack-as
  namespace: default
spec:
  rules:
  - host: chirpstack.pmcd.io
    http:
      paths:
      - backend:
          service:
            name: chirpstack-as-external
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - chirpstack.pmcd.io
    secretName: chirpstack-prod-tls
